--- a/main.html
+++ b/main.html
@@ -39,7 +39,7 @@
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
-  <script src="../particles-config.js"></script>
+  <script src="particles-config.js"></script>
 
   <script>
     function createFloatingLetters(selector, text) {
